--- a/smms/src/assets/style/common.css
+++ b/smms/src/assets/style/common.css
@@ -17,6 +17,11 @@ a{
     text-decoration:none;
 }
 
+/*按钮颜色 */
+.el-button--primary{
+    background-color: #58a100;
+    border-color: #58a100;
+}
 
 /* --------------------------------------------左侧--------------------------------------------- */
 /* 左侧顶部标题样式 */
@@ -162,3 +167,7 @@ a{
 .el-input--suffix{
    width: 100%;
 }
+
+
+
+    
